--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,10 @@
+/* reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 /* utils */
 .flex-center {
   display: flex;
@@ -12,7 +14,11 @@
 .h-100 {
   height: 100%;
 }
+.flex {
+  display: flex;
+}
 
+/* macro blocks */
 body {
   height: 100vh;
   background-image: linear-gradient(#00bfa5, #00bfa5 15%, #f0f0f0 15%, #f0f0f0);
@@ -24,5 +30,19 @@ body {
 .container {
   height: 90vh;
   width: 80%;
-  background-color: black;
+  background-color: white;
 }
+
+#chat-list {
+  width: 35%;
+  height: 100%;
+  background-color: lightgray;
+  border-right: 0.3px solid black;
+}
+
+#current-chat {
+  width: 65%;
+  height: 100%;
+  background-color: lightgray;
+}
+/* w.a interface */
