--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,6 @@ body {
 #chat-list {
   width: 35%;
   height: 100%;
-  
   border-right: 0.3px solid black;
 }
 
@@ -70,6 +69,8 @@ body {
   display: flex;
   align-items: center;
   justify-content:space-between;
+  background-color:#EAEAEA;
+  
 }
 #user i{
   color: gray;
@@ -90,7 +91,22 @@ body {
 }
 #enable-notification i{
   background-color: white;
-  padding: 8px;
+  padding: 10px;
   margin-left: 10px;
   color: #86d7fa;
+  font-size: 25px;
+}
+
+/* input search */
+#search-user{
+  padding: 5px;
+}
+#chat-list input{
+  border: 1px solid lightgray ;
+  border-radius: 5px;
+  width: 100%;
+  height: 40px;
+  color: gray;
+  font-size: 16px;
+  padding-left: 20px;
 }
