--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,11 @@
   justify-content: center;
   align-items: center;
 }
+.flex-start-center {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
 .h-100 {
   height: 100%;
 }
@@ -32,6 +37,7 @@
 .pointer{
   cursor: pointer;
 }
+
 
 /* macro blocks */
 body {
@@ -118,4 +124,38 @@ body {
 }
 #recent-chat .contact{
   height:90px ;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+/* ? CURRENT CHAT */
+
+/* current contact head */
+#current-contact{
+  height: 70px;
+  background-color: #EAEAEA;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#current-contact span{
+  color: gray;
+  font-size: 14px;
+}
+#current-contact i{
+  color: gray;
+  cursor: pointer;
+  padding-right: 30px;
+}
+
+/* chat */
+#chat-desk{
+  background-image:url(/img/mine.jpg);
+  height:calc(100% - 140px);
+}
+#chat-input{
+  height: 70px;
+  background-color:#ebe4dd ;
 }
