--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,9 @@
 .pointer{
   cursor: pointer;
 }
+.d-none{
+  display: none;
+}
 
 
 
@@ -130,6 +133,10 @@ body {
 #recent-chat {
   height: calc(100% - 200px );
   overflow-y: scroll;
+}
+#recent-chat .contact:hover{
+  cursor: pointer;
+  background-color: lightgray;
 }
 #recent-chat .contact{
   height:90px ;
