--- a/style/style.css
+++ b/style/style.css
@@ -144,6 +144,10 @@ body {
   justify-content: start;
   align-items: center;
 }
+#recent-chat .contact p{
+  font-size: 14px;
+  color: gray;
+}
 
 /* ? CURRENT CHAT */
 
