--- a/style/style.css
+++ b/style/style.css
@@ -47,7 +47,9 @@
 .d-none{
   display: none;
 }
-
+.visible{
+  display: block;
+}
 
 
 /* macro blocks */
@@ -181,11 +183,45 @@ body {
 
 .message{
   background-color: white;
-  padding: 15px;
+  padding: 20px;
   border-radius: 10px;
   width: fit-content;
   margin-top: 20px;
+  position: relative;
   
+}
+.message i{
+  color: lightgray;
+  cursor: pointer;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+.message .info{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  background-color: white;
+  border-radius: 10px;
+  z-index: 1;
+  box-shadow:3px 3px gray;
+  border: 1px solid gray;
+}
+.message .info span {
+  padding:5px;
+  display: block;
+  cursor: pointer;
+}
+.message .info span:hover{
+  background-color: lightgray;
+  
+}
+.message .info  span:first-child{
+  border-bottom: 1px solid gray;
+  border-radius: 10px 10px 0 0;
+}
+.message .info  span:last-child{
+border-radius: 0 0 10px 10px;
 }
 .my-message{
   background-color:#D5F9BA ;
